instructor-dashboard/tenant/instructor-dashboard/templates/prometheus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/name: prometheus-service
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/part-of: instructor-dashboard
spec:
  selector:
    app.kubernetes.io/name: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
